[package]
name = "wled-commander"
version = "0.1.0"
authors = ["Borgel <iborgel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
parse_int = "0.4.0"
serde_yaml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.7"
raster = "0.2.0"
# HUUUUGE dep tree
reqwest = { version = "0.10", features = ["json", "blocking"] }
